fix headshot appearing on smaller screens

--- a/public/css/media-queries.css
+++ b/public/css/media-queries.css
@@ -215,7 +215,9 @@
 
    /* About Section
    -------------------------------------------------------------------- */
-   #about .profile-pic { display: none; }
+   #about .profile-container {
+       margin-bottom: 20px;
+   }
    #about .download .button {
       width: 100%;
       text-align: center;
